[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Gradient Editor/Gradient Editor.gd" type="Script" id=1]
[ext_resource path="res://UI/Common/Checkerboard.png" type="Texture" id=2]
[ext_resource path="res://UI/Gradient Editor/GradientControl.gd" type="Script" id=3]
[ext_resource path="res://UI/Gradient Editor/ColorPicker.gd" type="Script" id=4]


[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=2]

gradient = SubResource( 1 )
width = 1024

[node name="Gradient Editor" type="Control"]
anchor_right = 1.0
margin_right = -652.0
margin_bottom = 80.0
rect_min_size = Vector2( 308, 80 )
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="ColorPanel" type="Panel" parent="."]
margin_right = 308.0
margin_bottom = 68.0
rect_min_size = Vector2( 308, 68 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Margin" type="MarginContainer" parent="ColorPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 308, 0 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="CheckerBG" type="TextureRect" parent="ColorPanel/Margin"]
margin_left = 4.0
margin_top = 4.0
margin_right = 304.0
margin_bottom = 64.0
rect_min_size = Vector2( 300, 0 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="GradientTex" type="TextureRect" parent="ColorPanel/Margin"]
margin_left = 4.0
margin_top = 4.0
margin_right = 304.0
margin_bottom = 64.0
rect_min_size = Vector2( 300, 0 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
expand = true
script = ExtResource( 3 )

[node name="PopupPanel" type="PopupPanel" parent="."]
margin_left = 4.0
margin_top = 80.0
margin_right = 310.0
margin_bottom = 546.0

[node name="ColorPicker" type="ColorPicker" parent="PopupPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 302.0
margin_bottom = 462.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 4 )

[connection signal="show_color_picker" from="ColorPanel/Margin/GradientTex" to="." method="_on_GradientTex_show_color_picker"]
[connection signal="popup_hide" from="PopupPanel" to="ColorPanel/Margin/GradientTex" method="_on_PopupPanel_popup_hide"]
[connection signal="color_changed" from="PopupPanel/ColorPicker" to="ColorPanel/Margin/GradientTex" method="_on_ColorPicker_color_changed"]
